# trs

./: README  TRS.cabal  debugTRS
src/: MaybeT.hs  TRS.hs
src/TRS/: Annot.hs  Bottom.hs  Confluence.hs  Context.hs  Core.hs  Core.hs-boot  Core.hs.GADT  GTerms.hs  GTerms.hs-boot  MaybeST.hs  Monad.hs  MonadEnv.hs  MonadFresh.hs  Narrowing.hs  Rewriting.hs  Rules.hs  Rules.hs-boot  Signature.hs  Substitutions.hs  Term.hs  Term.hs-boot  Terms.hs  Terms.hs-boot  Types.hs  Tyvars.hs  UMonad.hs  Unification.hs  Utils.hs
src/Test/: Benchmark.hs  Peano.hs  TermRef.hs  test.hs  test2.hs
test/: Peano.hs  TermRef.hs  Test2  Test2.hs.html  Test2.tix  hpc_index_fun.html  test.hs  test2.hs
test/TRS/: Test.hs  Test2  test.hs  test2.hs
test/TRS/Test/: Instances.hs  Peano.hs  TermRef.hs
