name: TRS
version: 0.17
Cabal-Version:  >= 1.2
license: AllRightsReserved
license-file: ""
copyright: Pepe Iborra, All Rights Reserved
build-depends: base -any, mtl, containers, pretty, alacarte, typeprelude, smallcheck, QuickCheck >= 2.0, HUnit, lazysmallcheck, logict
homepage:
synopsis: A Term Rewriting & Extensions library using Data Types a la Carte
description: 
category:
author: Pepe Iborra
exposed-modules: 
  TRS
  TRS.Utils 
  TRS.Term
  TRS.Types
  TRS.Substitutions
  TRS.Rules
  TRS.Rewriting
  TRS.Unification
  TRS.Narrowing
  TRS.Context
  TRS.MonadEnv
  TRS.MonadFresh
  TRS.UMonad
  TRS.Signature

  TRS.Test
  TRS.Test.Instances
  TRS.Test.Peano
  TRS.Test.TermRef
buildable: True
extensions: CPP, UndecidableInstances, OverlappingInstances,
	    MultiParamTypeClasses, FunctionalDependencies,
	    FlexibleContexts, FlexibleInstances, TypeSynonymInstances
	    GeneralizedNewtypeDeriving, TypeOperators, ScopedTypeVariables
hs-source-dirs: src, test
ghc-prof-options: -prof -auto-all
ghc-options: -O2 -Wall -fno-warn-name-shadowing
