name: TRS
version: 0.21.20080206
Cabal-Version:  >= 1.2
license: AllRightsReserved
license-file: ""
copyright: Pepe Iborra, All Rights Reserved
homepage:
synopsis: A Term Rewriting & Extensions library using Data Types a la Carte
description: 
category:
author: Pepe Iborra

Flag tests
   description: build additional modules with useful instances and types for testing

Flag ghc10
Flag debug
   Default: False

Library
 buildable: True
 build-depends: base < 4, mtl, containers, pretty, alacarte, typeprelude, logict, parallel
 exposed-modules: 
  TRS
  TRS.Utils 
  TRS.Term
  TRS.Types
  TRS.Substitutions
  TRS.Rules
  TRS.Rewriting
  TRS.Unification
  TRS.Narrowing
  TRS.Context
  TRS.MonadEnv
  TRS.MonadFresh
  TRS.UMonad
  TRS.Signature
  TRS.Confluence
 extensions: CPP, UndecidableInstances, OverlappingInstances,
             MultiParamTypeClasses, FunctionalDependencies,
             FlexibleContexts, FlexibleInstances, TypeSynonymInstances
             GeneralizedNewtypeDeriving, TypeOperators, ScopedTypeVariables
 hs-source-dirs: src
 ghc-prof-options: -prof -auto-all
 ghc-options: -O2 -Wall -fno-warn-name-shadowing
 if flag(tests)
    build-depends: smallcheck, QuickCheck >= 2.0, HUnit < 1.2 , lazysmallcheck
    exposed-modules: 
      TRS.Test
      TRS.Test.Instances
      TRS.Test.Peano
      TRS.Test.TermRef
    hs-source-dirs: test
 if flag(ghc10)
    build-depends: ghc-prim
 if flag(debug)
    build-depends: GHood
    cpp-options: -DDEBUGTRS -DHOOD